--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.21",
     "ng-image-slider": "^2.6.4",
     "ng-sidebar": "^9.4.2",
     "rxjs": "~6.6.6",
