--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
@@ -37,7 +38,6 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
