--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.21",
     "ng-image-slider": "^2.6.4",
     "ng-sidebar": "^9.4.2",
+    "ng2-daterangepicker": "^3.0.1",
     "rxjs": "~6.6.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
