--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run wada:serve-ssr",
+    "serve:ssr": "node dist/wada/server/main.js",
+    "build:ssr": "ng build --prod && ng run wada:server:production",
+    "prerender": "ng run wada:prerender"
   },
   "private": true,
   "dependencies": {
@@ -19,10 +23,13 @@
     "@angular/localize": "^11.2.5",
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
+    "@angular/platform-server": "~11.2.5",
     "@angular/router": "~11.2.5",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@nguniversal/express-engine": "^11.2.1",
     "angular-cli-ghpages": "^1.0.0-rc.1",
     "bootstrap": "^4.5.2",
+    "express": "^4.15.2",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
     "ng-image-slider": "^2.6.4",
@@ -36,6 +43,8 @@
     "@angular-devkit/build-angular": "^0.1102.4",
     "@angular/cli": "^11.2.4",
     "@angular/compiler-cli": "~11.2.5",
+    "@nguniversal/builders": "^11.2.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
