--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^4.5.2",
     "express": "^4.15.2",
     "font-awesome": "^4.7.0",
+    "localstorage-polyfill": "^1.0.1",
     "lodash": "^4.17.21",
     "ng-image-slider": "^2.6.4",
     "ng-sidebar": "^9.4.2",
